--- a/app/views/roles/get_roles_by_token.html.erb
+++ b/app/views/roles/get_roles_by_token.html.erb
@@ -4,7 +4,7 @@
     <li><%=role.name%></li>
 <%end%>
 <br><p>The token is -- </p>
-<%=@roles_hash[:token] %>
+<%=@token %>
 
-<br><p>Token parsed? -- </p>
+<br><br><p>Token parsed? -- </p>
 <%=@parsed %>
