added to the migration to recompile the vuid procedure when the column length is changed

--- a/app/views/app_deployer/index.html.erb
+++ b/app/views/app_deployer/index.html.erb
@@ -34,7 +34,7 @@
         <h3 class="modal-title">Application Deployer</h3>
       </div>
       <div class="modal-body">
-        <%= form_tag(app_deployer_deploy_app_path, :id => 'app_deployer_form') do |f| %>
+        <%= form_tag(app_deployer_deploy_app_path, :id => 'app_deployer_form', remote: true ) do |f| %>
             <h3>Select the Application Type</h3>
             <%= field_set_tag 'Select the Application Type' do %>
                 <%= label_tag 'application_KOMET', class: 'radio-inline' do %>
@@ -281,6 +281,7 @@
                 setTimeout(function () {
                     $('#app_deploy_modal').modal('toggle');
                     flash_notify({message: 'The deployment request was received successfully!'}, {type: 'success'})
+                    refresh_it();
                 }, 4000);
             }
         }).validate({
@@ -292,5 +293,9 @@
                 error.insertAfter(lbl);
             }
         });
+    }
+    function refresh_it() {
+        console.log("refreshing the page!!!!");
+        $.get(gon.routes.app_deployer, {refresh: true});
     }
 </script>
