--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -32,7 +32,7 @@
 
     <% if policy(:navigation).any_administrator? %>
         <div>
-          <a href="<%= app_deployer_path %>" class="prisme-link-button" onclick="polling.checkPolling(polling.pollEnum.DEPLOYER);" title="Deploy Applications">Application
+          <a href="<%= app_deployer_path %>?refresh=true" class="prisme-link-button" onclick="polling.checkPolling(polling.pollEnum.DEPLOYER);" title="Deploy Applications">Application
             Deployer</a>
         </div>
     <% end %>
