--- a/config/props/prisme.properties.erb
+++ b/config/props/prisme.properties.erb
@@ -50,3 +50,6 @@ disallow_local_signups_on=PRE_PROD,PROD
 
 #Allow self signed certificates? Set to false and they will work.
 ssl_verification = true
+
+#time in minutes between fetches from nexus for the app deployer
+app_deployer_cache = 1
