508 - adding form label + changing contrast color for main page caption for service name

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -282,6 +282,9 @@ body.wait, body.wait *{
 .prisme-table {
   font-family: calibri, arial, sans-serif;
   width: 100%;
+  caption {
+    color: #5c5959;
+  }
 }
 
 .prisme-table thead th {
