Slack no worky on new va dev.

--- a/config/props/prisme.properties.erb
+++ b/config/props/prisme.properties.erb
@@ -59,3 +59,6 @@ db_builder_cache = 5
 
 #time in minutes between fetches from nexus for the tomcat_deployment_cache
 tomcat_deployment_cache = 1
+
+#slack notify jenkins job build
+slack_job_notify = false
