508 for modal tabbing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -371,3 +371,26 @@ h1,
   color: #FFFFDD;
   background-color: #C02F1D;
 }
+
+/* 508 */
+
+*:focus{ border:4px solid black; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
