--- a/app/views/app_deployer/index.html.erb
+++ b/app/views/app_deployer/index.html.erb
@@ -30,7 +30,7 @@
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" tabindex="1">&times;</button>
         <h3 class="modal-title">Application Deployer</h3>
       </div>
       <div class="modal-body">
