--- a/app/views/welcome/_log_events.html.erb
+++ b/app/views/welcome/_log_events.html.erb
@@ -66,7 +66,10 @@
         <input type="hidden" id="ack_log_event_id" name="id">
 
         <div title="Enter a comment for how/why this log event was acknowledged.">
-          <div style="display:inline-block"><span style="float: left" id="lbl_comment"><h4>Comment</h4></span></div>
+          <div style="display:inline-block"><span style="float: left" id="lbl_comment"></span></div>
+          <label for="ack_comment">
+              <h4>Comment</h4>
+          </label>
           <%= text_area_tag 'ack_comment', nil, 'aria-labelledby': 'lbl_comment', placeholder: 'Enter an OPTIONAL acknowledgement comment', rows: '3', cols: 76, class: 'form-control' %>
         </div>
         <br>
