--- a/app/views/admin_user_edit/_users.html.erb
+++ b/app/views/admin_user_edit/_users.html.erb
@@ -22,7 +22,7 @@
             <button data-toggle="modal" data-target="#editModal" class="btn btn-primary" onclick='edit_user_roles("<%=user.user_row_id%>", <%= raw JSON.parse(user_roles.to_json) %>);'>
               <i class="fa fa-edit fa-fw" aria-hidden="true"></i>&nbsp;Edit User Roles</button>
             <!-- user cannot delete themselves -->
-            <% unless (prisme_user == user) %>
+            <% unless prisme_user == user %>
                 <button class="btn btn-danger" onclick="delete_user('<%=user.user_row_id%>', '<%= user.user_name %>');">
                   <i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;Delete User</button>
             <% end %>
