--- a/app/views/welcome/_app_deployment_table.html.erb
+++ b/app/views/welcome/_app_deployment_table.html.erb
@@ -88,16 +88,16 @@
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-        <button tabindex="1" type="button" class="close" data-dismiss="modal">&times;</button>
-        <button tabindex="2" type="button" class="btn btn-primary" id="btn_submit_form" autofocus onclick="submitRenameDeployment();">Rename Application</button>
+        <button tabindex="1" type="button" class="close" data-dismiss="modal" aria-label="Close button">&times;</button>
+        <button tabindex="2" type="button" class="btn btn-primary" id="btn_submit_form" autofocus onclick="submitRenameDeployment();" aria-label="Rename Application Button">Rename Application</button>
       </div>
       <div class="modal-body scrollable_div">
         <div id="application_name_desc" style="width: 500px">
           <%= label_tag 'application_name', 'Application Name:' %><br>
-          <%= text_field_tag 'war_name', nil, id: 'war_name', placeholder: 'Enter an Application Name', maxlength: 45, size: 45, class: 'form-control', required: true, tabindex: 3 %>
+          <%= text_field_tag 'war_name', nil, id: 'war_name', placeholder: 'Enter an Application Name', maxlength: 45, size: 45, class: 'form-control', required: true, tabindex: 3, :'aria-label' => "Enter Application Name" %>
           <br>
           <%= label_tag 'war_description', 'Application Description:' %><br>
-          <%= text_area_tag 'war_description', nil, id: 'war_description',placeholder: 'Please describe this application deployment', size: '500x5', class: 'form-control', tabindex: 4 %>
+          <%= text_area_tag 'war_description', nil, id: 'war_description',placeholder: 'Please describe this application deployment', size: '500x5', class: 'form-control', tabindex: 4, :'aria-label' => "Enter Application Description" %>
         </div>
       </div>
     </div>
@@ -110,26 +110,10 @@
 
       $('#warNameModal').on('shown.bs.modal', function(e) {
         e.preventDefault();
-        setModalTabs();
+        setModalTabs('#warNameModal', 4);
         $('[autofocus]').focus();
       });
        
-       function setModalTabs() { 
-          var maxTabIndex = 4;
-          $('#warNameModal [tabindex=' + maxTabIndex + ']').on('keydown', function(e) {
-            if (e.keyCode == 9 && e.shiftKey == false) {
-              e.preventDefault();
-              $('#warNameModal [tabindex=1]').focus();
-            };
-          });
-
-          $('#warNameModal [tabindex=1]').on('keydown', function(e) {
-            if (e.keyCode == 9 && e.shiftKey == true) {
-              e.preventDefault();
-              $('#warNameModal [tabindex=' + maxTabIndex + ']').focus();
-            };
-          });
-       };
     });
 
     function check_awaiting_poll_results() {
